# evolution

./: .gitattributes  Cargo.toml  README.md
display/: Cargo.toml
display/src/: lib.rs  tetra.rs
docs/: conception.md  introduction.md  main.md  terminology.md
world/: Cargo.toml
world/src/: errors.rs  init.rs  landscape.rs  main.rs
world/src/animal/: mod.rs
world/src/animal/brains/: mod.rs  simple.rs
world/src/animal/species/: mod.rs  simple.rs
world/src/config/: mod.rs
world/src/plant/: mod.rs  simple.rs
